# Bill

./: .gitignore  Cargo.toml  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: dock.html
app/src/main/java/com/sanshuiqimu/bill/: MainActivity.kt
app/src/main/java/com/sanshuiqimu/bill/data/: BillDatabase.kt
app/src/main/java/com/sanshuiqimu/bill/data/dao/: CategoryDao.kt  TransactionDao.kt
app/src/main/java/com/sanshuiqimu/bill/data/entity/: CategoryEntity.kt  Converters.kt  TransactionEntity.kt
app/src/main/java/com/sanshuiqimu/bill/data/repository/: BillRepository.kt
app/src/main/java/com/sanshuiqimu/bill/ui/components/: CommonComponents.kt  LiquidGlassDock.kt  LiquidGlassDockWebView.kt
app/src/main/java/com/sanshuiqimu/bill/ui/navigation/: BillNavigation.kt
app/src/main/java/com/sanshuiqimu/bill/ui/screens/add/: AddTransactionScreen.kt  AddTransactionViewModel.kt
app/src/main/java/com/sanshuiqimu/bill/ui/screens/group/: GroupScreen.kt  GroupViewModel.kt
app/src/main/java/com/sanshuiqimu/bill/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/sanshuiqimu/bill/util/: Enums.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
src/: cli.rs  commands.rs  main.rs  models.rs  storage.rs
(+6 files in other folders)
