[package]
name = "bill"
version = "1.0.0"
edition = "2021"
authors = ["SanshuiQimu"]
description = "一个功能丰富的命令行记账本应用"
license = "MIT"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "=0.4.31", features = ["serde"] }
colored = "=2.0.4"
dirs = "=5.0.1"
uuid = { version = "=1.6.1", features = ["v4"] }

[[bin]]
name = "bill"
path = "src/main.rs"

[profile.release]
opt-level = 3
